--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
+    <!-- aos -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- My css -->
     <link rel="stylesheet" href="style.css" />
 
@@ -28,7 +30,7 @@
       id="navbar"
     >
       <div class="container">
-        <a class="navbar-brand" href="#">Egianta bangun</a>
+        <img src="img/logo.png" alt="logo" class="navbar-brand" />
         <button
           class="navbar-toggler"
           type="button"
@@ -71,7 +73,7 @@
         class="rounded-circle img-thumbnail"
       />
       <h1 class="display-4">Egianta bangun</h1>
-      <p class="lead">Web Developer | Digital Creator</p>
+      <p class="lead"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#fff"
@@ -90,14 +92,22 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-4 md-4">
+          <div
+            class="col-4 md-4"
+            data-aos="fade-right"
+            data-aos-duration="1000"
+          >
             <p>
-              A programmer is someone who writes/creates computer software or
-              applications by providing a specific programming language to the
-              computer.
+              A programmer is someone who creates computer software or by
+              providing a specific programming language to the computer.
             </p>
           </div>
-          <div class="col-4 md-4">
+          <div
+            class="col-4 md-4"
+            data-aos="fade-left"
+            data-aos-duration="1000"
+            data-aos-delay="200"
+          >
             <p>
               Content creation is the act of producing and sharing information
               or media content for specific audiences
@@ -124,7 +134,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="500">
               <a href="https://egianta.github.io/kedai-kopi-kenangan-senja/"
                 ><img
                   src="img/projects/1.jpg"
@@ -144,7 +154,12 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div
+              class="card"
+              data-aos="flip-left"
+              data-aos-duration="500"
+              data-aos-delay="100"
+            >
               <img
                 src="img/projects/2.jpg"
                 class="card-img-top"
@@ -159,7 +174,12 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div
+              class="card"
+              data-aos="flip-left"
+              data-aos-duration="500"
+              data-aos-delay="200"
+            >
               <img
                 src="img/projects/3.jpg"
                 class="card-img-top"
@@ -174,7 +194,12 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div
+              class="card"
+              data-aos="flip-left"
+              data-aos-duration="500"
+              data-aos-delay="300"
+            >
               <img
                 src="img/projects/4.jpg"
                 class="card-img-top"
@@ -189,7 +214,12 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div
+              class="card"
+              data-aos="flip-left"
+              data-aos-duration="500"
+              data-aos-delay="400"
+            >
               <img
                 src="img/projects/5.jpg"
                 class="card-img-top"
@@ -214,6 +244,109 @@
       </svg>
     </section>
     <!-- project end -->
+    <!-- gallery start-->
+    <section id="gallery">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>Gallery</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-3">
+            <a href="#">
+              <img
+                src="img/gallery/thumbnail/1.jpg"
+                alt="Gambar 1"
+                class="img-fluid gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img
+                src="img/gallery/thumbnail/2.jpg"
+                alt="Gambar 2"
+                class="img-fluid gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img
+                src="img/gallery/thumbnail/3.jpg"
+                alt="Gambar 3"
+                class="img-fluid gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img
+                src="img/gallery/thumbnail/4.jpg"
+                alt="Gambar 4"
+                class="img-fluid gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img
+                src="img/gallery/thumbnail/5.jpg"
+                alt="Gambar 5"
+                class="img-fluid gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img
+                src="img/gallery/thumbnail/6.jpg"
+                alt="Gambar 6"
+                class="img-fluid gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img
+                src="img/gallery/thumbnail/7.jpg"
+                alt="Gambar 7"
+                class="img-fluid gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img
+                src="img/gallery/thumbnail/8.jpg"
+                alt="Gambar 8"
+                class="img-fluid gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img
+                src="img/gallery/thumbnail/9.jpg"
+                alt="Gambar 9"
+                class="img-fluid gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img
+                src="img/gallery/thumbnail/10.jpg"
+                alt="Gambar 10"
+                class="img-fluid gallery-img"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- gallery end-->
     <!-- contact start -->
     <section id="contact">
       <div class="container">
@@ -269,7 +402,7 @@
                   required
                 ></textarea>
               </div>
-              <button type="submit" class="btn btn-primary btn-kirim">
+              <button type="submit" class="btn btn-primary btn-kirim col-2">
                 Kirim
               </button>
 
@@ -324,6 +457,53 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+
+    <!-- aos -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      const galleryImage = document.querySelectorAll(".gallery-img");
+
+      galleryImage.forEach((img, i) => {
+        img.dataset.aos = "fade-down";
+        img.dataset.aosDelay = i * 100;
+        img.dataset.aosDuration = 1000;
+      });
+
+      AOS.init({
+        once: true,
+      });
+    </script>
+    <!-- GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
+
+    <script>
+      gsap.registerPlugin(TextPlugin);
+      gsap.to(".lead", {
+        duration: 2,
+        delay: 1.5,
+        text: "Web Developer | Digital Creator",
+        ease: "none",
+      });
+      gsap.from(".jumbotron img", {
+        duration: 1,
+        rotateY: 360,
+        opacity: 0,
+      });
+      gsap.from(".navbar", {
+        duration: 1.5,
+        y: "-100%",
+        opacity: 0,
+        ease: "bounce",
+      });
+      gsap.from(".display-4", {
+        duration: 1,
+        x: -50,
+        opacity: 0,
+        delay: 0.5,
+        ease: "back",
+      });
+    </script>
 
     <!-- script contact spreadshet -->
     <script>
