--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- jumbotron start -->
     <section class="jumbotron text-center">
       <img
-        src="img/egi.jpg"
+        src="img/egi4.jpg"
         alt="Egi"
         width="200"
         class="rounded-circle img-thumbnail"
@@ -135,7 +135,9 @@
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="500">
-              <a href="https://egianta.github.io/kedai-kopi-kenangan-senja/"
+              <a
+                href="https://egianta.github.io/kedai-kopi-kenangan-senja/"
+                target="_blank"
                 ><img
                   src="img/projects/1.jpg"
                   class="card-img-top"
@@ -147,6 +149,7 @@
                 </p>
                 <a
                   href="https://egianta.github.io/kedai-kopi-kenangan-senja/"
+                  target="_blank"
                   class="btn btn-primary"
                   >Lihat</a
                 >
@@ -160,16 +163,27 @@
               data-aos-duration="500"
               data-aos-delay="100"
             >
-              <img
-                src="img/projects/2.jpg"
-                class="card-img-top"
-                alt="Project 2"
-              />
+              <a
+                href="https://egianta.github.io/undangan-pernikahan/"
+                target="_blank"
+              >
+                <img
+                  src="img/projects/2.jpg"
+                  class="card-img-top"
+                  alt="Project 2"
+                />
+              </a>
               <div class="card-body">
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
+                <a
+                  href="https://egianta.github.io/undangan-pernikahan/"
+                  target="_blank"
+                  class="btn btn-primary"
+                  >Lihat</a
+                >
               </div>
             </div>
           </div>
@@ -352,7 +366,7 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>Contact Me</h2>
+            <h2>Hubungi Saya</h2>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -379,6 +393,7 @@
                   aria-describedby="name"
                   name="nama"
                   required
+                  placeholder="nama"
                 />
               </div>
               <div class="mb-3">
@@ -390,6 +405,7 @@
                   aria-describedby="email"
                   name="email"
                   required
+                  placeholder="email"
                 />
               </div>
               <div class="mb-3">
@@ -400,6 +416,7 @@
                   rows="3"
                   name="pesan"
                   required
+                  placeholder="pesan"
                 ></textarea>
               </div>
               <button type="submit" class="btn btn-primary btn-kirim col-2">
@@ -482,7 +499,7 @@
       gsap.to(".lead", {
         duration: 2,
         delay: 1.5,
-        text: "Web Developer | Digital Creator",
+        text: "Newbie programer",
         ease: "none",
       });
       gsap.from(".jumbotron img", {
