--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home"
+              <a class="nav-link" aria-current="page" href="#home"
                 >Home</a
               >
             </li>
@@ -88,18 +88,17 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>About Me</h2>
+            <h2>Tentang Saya</h2>
           </div>
         </div>
-        <div class="row justify-content-center fs-5 text-center">
+        <div class="row justify-content-center fs-10   text-center">
           <div
             class="col-4 md-4"
             data-aos="fade-right"
             data-aos-duration="1000"
           >
             <p>
-              A programmer is someone who creates computer software or by
-              providing a specific programming language to the computer.
+              “Saya adalah seorang lulusan SMK jurusan Teknik Komputer yang penuh semangat dalam menghadapi tantangan di dunia teknologi. Dengan keahlian programing, saya memiliki ketekunan dalam mencari solusi untuk masalah di era digital. 
             </p>
           </div>
           <div
@@ -109,13 +108,12 @@
             data-aos-delay="200"
           >
             <p>
-              Content creation is the act of producing and sharing information
-              or media content for specific audiences
+              Saya juga mampu bekerja dalam tim dan siap belajar hal baru untuk terus meningkatkan kemampuan saya.”
             </p>
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" >
         <path
           fill="#95e1ff"
           fill-opacity="1"
@@ -129,7 +127,7 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>My Projects</h2>
+            <h2>Proyek Saya</h2>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -263,7 +261,7 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>Gallery</h2>
+            <h2>Galeri</h2>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -454,7 +452,7 @@
         <a href="https://www.instagram.com/egianta._" class="text-white px-3"
           ><i class="bi bi-instagram"></i
         ></a>
-        <a href="https://wa.me/6281269684843?text=Hai" class="text-white px-3"
+        <a href="https://wa.me/6281269684843?text=Halo" class="text-white px-3"
           ><i class="bi bi-whatsapp"></i
         ></a>
         <a href="https://www.youtube.com/@egianta" class="text-white px-3"
@@ -462,7 +460,7 @@
         ></a>
       </div>
       <p>
-        Created With <i class="bi bi-hearts text-danger"></i> By
+        Created With <i class="bi bi-heart-pulse-fill text-danger"></i> By
         <a href="#" class="text-white fw-bold"> Egianta bangun</a>
       </p>
     </footer>
