update text tentang saya

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             data-aos-duration="1000"
           >
             <p>
-              “Saya adalah seorang lulusan SMK jurusan Teknik Komputer yang penuh semangat dalam menghadapi tantangan di dunia teknologi. Dengan keahlian programing, saya memiliki ketekunan dalam mencari solusi untuk masalah di era digital. 
+              “Saya adalah seorang lulusan SMK jurusan Teknik Komputer yang penuh semangat dalam menghadapi tantangan di dunia teknologi. Dengan keahlian programing, saya memiliki ketekunan dalam mencari solusi permasalahan di era digital. 
             </p>
           </div>
           <div
